--- a/TeachersTestAppWithLogging/Views/MainWindow.axaml
+++ b/TeachersTestAppWithLogging/Views/MainWindow.axaml
@@ -10,11 +10,33 @@
         Title="TeachersTestAppWithLogging">
 
     <Design.DataContext>
-        <!-- This only sets the DataContext for the previewer in an IDE,
-             to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+	<Grid>
+
+		<Grid.RowDefinitions>
+			<RowDefinition/>
+			<RowDefinition/>
+			<RowDefinition/>
+			<RowDefinition/>
+		</Grid.RowDefinitions>
+		
+		<Label Grid.Row="0"
+			   Content="Авторизация"
+			   FontSize="22"
+			   HorizontalAlignment="Center"
+			   FontWeight="Bold"/>
+		
+		<HeaderedContentControl Grid.Row="1"/>
+		
+		<HeaderedContentControl Grid.Row="2"/>
+		
+		<Button Grid.Row="3"
+				HorizontalAlignment="Center"
+				Height="40"
+				Width="250"/>
+		
+	</Grid>
 
 </Window>
