--- a/TeachersTestAppWithLogging/Views/MainWindow.axaml
+++ b/TeachersTestAppWithLogging/Views/MainWindow.axaml
@@ -1,5 +1,6 @@
 <Window xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:v="using:TeachersTestAppWithLogging.Views"
         xmlns:vm="using:TeachersTestAppWithLogging.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -13,6 +14,16 @@
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
-	
+	<Window.Styles>
+		<Style Selector="ContentControl.PageSwitcher_AuthPage">
+			<Setter Property="Template">
+				<ControlTemplate>
+					<v:AuthorizationUC DataContext="{Binding AuthorizationUCViewModel}"/>
+				</ControlTemplate>
+			</Setter>
+		</Style>
+	</Window.Styles>
+
+	<ContentControl Classes.PageSwitcher_AuthPage="{Binding IsAuthPageOpen}"/>
 
 </Window>
