--- a/TeachersTestAppWithLogging/Views/PersonalCabinetUC.axaml
+++ b/TeachersTestAppWithLogging/Views/PersonalCabinetUC.axaml
@@ -32,7 +32,8 @@
 									CornerRadius="5"
 									Margin="0,10,0,0"
 									BorderThickness="1">
-								<ContentPresenter Content="{TemplateBinding Content}" />
+								<ContentPresenter Content="{TemplateBinding Content}"
+												  VerticalContentAlignment="Center"/>
 							</Border>
 						</Grid>
 					</ControlTemplate>
@@ -63,7 +64,8 @@
 									CornerRadius="5"
 									Margin="0,10,0,0"
 									BorderThickness="1">
-								<ContentPresenter Content="{TemplateBinding Content}" />
+								<ContentPresenter Content="{TemplateBinding Content}"
+												  VerticalContentAlignment="Center" />
 							</Border>
 						</Grid>
 					</ControlTemplate>
