--- a/TeachersTestAppWithLogging/Views/PersonalCabinetUC.axaml
+++ b/TeachersTestAppWithLogging/Views/PersonalCabinetUC.axaml
@@ -171,7 +171,7 @@
 									Classes="Osn"
 									HorizontalAlignment="Left">
 
-				<TextBox Text="{Binding PhoneNumber}"/>
+				<TextBox Text="{Binding UserData.PhoneNumber}"/>
 
 			</HeaderedContentControl>
 			
