Отображение даты рождения

--- a/TeachersTestAppWithLogging/Views/PersonalCabinetUC.axaml
+++ b/TeachersTestAppWithLogging/Views/PersonalCabinetUC.axaml
@@ -144,7 +144,7 @@
 									Classes="Osn"
 									HorizontalAlignment="Left">
 
-				<DatePicker SelectedDate="{Binding UserData.Birthdate}"/>
+				<DatePicker SelectedDate="{Binding UserData.BirthDayOffset}"/>
 
 			</HeaderedContentControl>
 
