--- a/TeachersTestAppWithLogging/Views/CourcesListUC.axaml
+++ b/TeachersTestAppWithLogging/Views/CourcesListUC.axaml
@@ -29,11 +29,14 @@
 									<RowDefinition/>
 								</Grid.RowDefinitions>
 								
-								<TextBlock Grid.Row="0"/>
+								<TextBlock Grid.Row="0"
+										   Text="{Binding Cource1}"/>
 								
-								<TextBlock Grid.Row="1"/>
+								<TextBlock Grid.Row="1"
+										   Text="{Binding HoursNumber}"/>
 								
-								<TextBlock Grid.Row="2"/>
+								<TextBlock Grid.Row="2"
+										   Text="{Binding}"/>
 								
 							</Grid>
 							
@@ -67,7 +70,8 @@
 				   Content="Список курсов" FontSize="22" FontWeight="Bold"
 				   HorizontalAlignment="Center"/>
 
-			<ListBox Grid.Column="1" Grid.Row="1"/>
+			<ListBox Grid.Column="1" Grid.Row="1"
+					 ItemsSource="{Binding Cources}"/>
 
 		</Grid>
 
