--- a/TeachersTestAppWithLogging/Views/MainWindow.axaml
+++ b/TeachersTestAppWithLogging/Views/MainWindow.axaml
@@ -29,9 +29,17 @@
 				</ControlTemplate>
 			</Setter>
 		</Style>
+		<Style Selector="ContentControl.PageSwitcher_CourcesPage">
+			<Setter Property="Template">
+				<ControlTemplate>
+					<v:CourcesListUC DataContext="{Binding CourcesListUCViewModel}"/>
+				</ControlTemplate>
+			</Setter>
+		</Style>
 	</Window.Styles>
 
 	<ContentControl Classes.PageSwitcher_AuthPage="{Binding IsAuthPageOpen}"
-					Classes.PageSwitcher_PersonalPage="{Binding IsPersonalPage}"/>
+					Classes.PageSwitcher_PersonalPage="{Binding IsPersonalPage}"
+					Classes.PageSwitcher_CourcesPage="{Binding IsCourcesPage}"/>
 
 </Window>
