--- a/TeachersTestAppWithLogging/Views/PersonalCabinetUC.axaml
+++ b/TeachersTestAppWithLogging/Views/PersonalCabinetUC.axaml
@@ -73,6 +73,10 @@
 
 	</UserControl.Styles>
 
+	<UserControl.DataContext>
+		<vm:PersonalCabinetUCViewModel/>
+	</UserControl.DataContext>
+
 	<Border Padding="25 0 25 0">
 		<Grid>
 
@@ -98,7 +102,6 @@
 		           HorizontalAlignment="Center"
 		           FontWeight="Bold"
 				   Margin="0 0 0 15"/>
-
 			<Grid Grid.Row="1" Grid.ColumnSpan="2">
 
 				<Grid.ColumnDefinitions>
@@ -129,7 +132,6 @@
 				</HeaderedContentControl>
 				
 			</Grid>
-
 			<HeaderedContentControl Header="Логин"
 									Grid.Row="2"
 									Classes="Osn">
@@ -175,6 +177,43 @@
 									Classes="Osn">
 
 				<TextBox Text="{Binding UserData.PhoneNumber}"/>
+
+			</HeaderedContentControl>
+			
+			<StackPanel Grid.Row="3"
+						Grid.Column="1" Orientation="Horizontal">
+
+				<Button Width="20" Height="20"
+						Command="{Binding CheckBoxCommand}"
+						Classes.Outline="{Binding !IsChecked}"
+						Classes.Brushed="{Binding IsChecked}">
+					<!--По другому никак, чекбоксы и радиобатоны не отображаются-->
+
+					<Button.Styles>
+
+						<themes:MaterialTheme BaseTheme="Light" PrimaryColor="Blue" SecondaryColor="Blue" />
+						
+					</Button.Styles>
+					
+				</Button>
+				
+				<Label Content="Я здесь" VerticalAlignment="Center"/>
+
+			</StackPanel>
+
+			<HeaderedContentControl Header="Новый пароль"
+									Grid.Row="4" Grid.Column="1"
+									Classes="Osn" IsVisible="{Binding IsChecked}">
+
+				<TextBox Text="{Binding NewPassword}"/>
+
+			</HeaderedContentControl>
+
+			<HeaderedContentControl Header="Новый пароль (Повторите)"
+									Grid.Row="5" Grid.Column="1"
+									Classes="Osn" IsVisible="{Binding IsChecked}">
+
+				<TextBox Text="{Binding NewPasswordConfirm}"/>
 
 			</HeaderedContentControl>
 
