Сделана праактическая работа 13

--- a/TeachersTestAppWithLogging/Views/PersonalCabinetUC.axaml
+++ b/TeachersTestAppWithLogging/Views/PersonalCabinetUC.axaml
@@ -205,7 +205,7 @@
 					
 				</Button>
 				
-				<Label Content="Я здесь" VerticalAlignment="Center"/>
+				<Label Content="Изменить пароль" VerticalAlignment="Center"/>
 
 			</StackPanel>
 
