--- a/TeachersTestAppWithLogging/Views/CourcesListUC.axaml
+++ b/TeachersTestAppWithLogging/Views/CourcesListUC.axaml
@@ -3,8 +3,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 xmlns:vm="using:TeachersTestAppWithLogging.ViewModels"
+			 xmlns:themes="clr-namespace:Material.Styles.Themes;assembly=Material.Styles"
 			 xmlns:dbm="using:TeachersTestAppWithLogging"
-             mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+             mc:Ignorable="d" d:DesignWidth="1000" d:DesignHeight="800"
              x:Class="TeachersTestAppWithLogging.Views.CourcesListUC"
 			 x:DataType="vm:CourcesListUCViewModel">
 
@@ -53,6 +54,39 @@
 			</Setter>
 			
 		</Style>
+
+		<Style Selector="HeaderedContentControl">
+			<Setter Property="Margin" Value="0 0 10 0"/>
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate>
+						<Grid>
+							<Grid.RowDefinitions>
+								<RowDefinition Height="Auto"/>
+								<RowDefinition Height="*"/>
+							</Grid.RowDefinitions>
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition Width="Auto"/>
+								<ColumnDefinition Width="*"/>
+							</Grid.ColumnDefinitions>
+							<Border ZIndex="1" Padding="5,0,5,0" Background="White" Margin="5,0,0,0">
+								<TextBlock TextBlock.FontWeight="Bold" Text="{TemplateBinding Header}" />
+							</Border>
+							<Border Grid.RowSpan="2" Grid.ColumnSpan="2"
+									CornerRadius="5"
+									Margin="0,10,0,0"
+									BorderThickness="1"
+									BorderBrush="Black">
+								<ContentPresenter 
+									Content="{TemplateBinding Content}"
+									VerticalContentAlignment="Center"
+									Margin="5 0 0 0"/>
+							</Border>
+						</Grid>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+		</Style>
 		
 	</UserControl.Styles>
 
@@ -77,15 +111,39 @@
 			<ItemsRepeater Grid.Column="1" Grid.Row="1"
 					 ItemsSource="{Binding Cources}"/>
 
-			<Grid Grid.Row="1" Grid.Column="0">
+			<Grid Grid.Column="1" Height="60" Margin="0 15 0 0">
+
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition/>
+					<ColumnDefinition/>
+				</Grid.ColumnDefinitions>
+				
+				<Grid.RowDefinitions>
+					<RowDefinition/>
+					<RowDefinition/>
+				</Grid.RowDefinitions>
+
+
+				<TextBox Height="60" Grid.RowSpan="2"
+					 FontSize="20" Margin="0 0 20 0">
+					<TextBox.Styles>
+						<themes:MaterialTheme BaseTheme="Light" PrimaryColor="Pink" SecondaryColor="Blue" />
+					</TextBox.Styles>
+				</TextBox>
+				
+				<RadioButton Grid.Column="1" Content="По названию"/>
+				<RadioButton Grid.Column="1" Grid.Row="1" Content="По кол-ву часов"/>
+				
+			</Grid>
+
+			<Grid Grid.Column="0" Grid.Row="1">
 
 				<Grid.RowDefinitions>
 					<RowDefinition/>
 					<RowDefinition/>
 				</Grid.RowDefinitions>
 
-				<HeaderedContentControl Grid.Row="0"
-										Header="Сортировка">
+				<HeaderedContentControl Header="Сортировка" Height="150">
 
 					<Grid>
 
@@ -95,21 +153,43 @@
 							<RowDefinition/>
 						</Grid.RowDefinitions>
 
-						<ComboBox Grid.Row="0">
+						<ComboBox Grid.Row="0" SelectedIndex="0">
 							<ComboBoxItem>Название</ComboBoxItem>
 							<ComboBoxItem>Кол-во часов</ComboBoxItem>
 						</ComboBox>
-						
-						<RadioButton Grid.Row="1" 
+
+						<RadioButton Grid.Row="1"
 									 Content="По возрастанию"/>
 
-						<RadioButton Grid.Row="2" 
+						<RadioButton Grid.Row="2"
 									 Content="По убыванию"/>
-						
+
 					</Grid>
 
 				</HeaderedContentControl>
-				
+
+				<HeaderedContentControl Header="Фильтрация" Height="80"
+										Grid.Row="1">
+
+					<Grid>
+
+						<Grid.RowDefinitions>
+							<RowDefinition/>
+							<RowDefinition/>
+							<RowDefinition/>
+						</Grid.RowDefinitions>
+
+						<ComboBox Grid.Row="0" SelectedIndex="0">
+							<ComboBoxItem>Нет фильтра</ComboBoxItem>
+							<ComboBoxItem>От 0 до 30 ч.</ComboBoxItem>
+							<ComboBoxItem>От 30 до 60 ч.</ComboBoxItem>
+							<ComboBoxItem>От 60 до 120 ч.</ComboBoxItem>
+							<ComboBoxItem>От 120 ч.</ComboBoxItem>
+						</ComboBox>
+					</Grid>
+
+				</HeaderedContentControl>
+
 			</Grid>
 
 		</Grid>
